--- a/themes/default/assets/less/base/headings.less
+++ b/themes/default/assets/less/base/headings.less
@@ -9,7 +9,7 @@ h4,
 h5 {
     font-family: 'MORFY_400', "Helvetica Neue", Helvetica, arial, sans-serif;
 
-    color: #000;
+    color: @black;
 }
 
 .h2-reason {
