--- a/themes/default/assets/less/base/main.less
+++ b/themes/default/assets/less/base/main.less
@@ -4,12 +4,12 @@
 
 html,
 body {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 14px;
+    font-family: @base-font-family;
+    font-size: @base-font-size;
 
     height: 100%;
 
-    color: @black;
+    color: @base-font-color;
     background: @white;
 }
 
