--- a/themes/default/assets/less/components/benefits.less
+++ b/themes/default/assets/less/components/benefits.less
@@ -7,18 +7,18 @@
     margin-bottom: 50px;
 
     text-align: center;
-}
 
-.features-columns h4 {
-    font-weight: 700;
+    h4 {
+        font-weight: 700;
 
-    color: #c75c5c;
-}
+        color: #c75c5c;
+    }
 
-.features-columns img {
-    display: block;
+    img {
+        display: block;
 
-    width: 90px;
-    height: auto;
-    margin: 0 auto 30px;
+        width: 90px;
+        height: auto;
+        margin: 0 auto 30px;
+    }
 }
