--- a/themes/default/assets/less/components/footer.less
+++ b/themes/default/assets/less/components/footer.less
@@ -5,13 +5,13 @@
 #footer {
     height: 60px;
 
-    background-color: #fff;
-}
+    background-color: @white;
 
-#footer p {
-    padding-top: 20px;
-}
+    p {
+        padding-top: 20px;
+    }
 
-#footer .social-link-del {
-    color: #ccc;
+    .social-link-del {
+        color: #ccc;
+    }
 }
