--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -7,7 +7,7 @@
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
+    background-color: @white;
 }
 
 .navbar-default .navbar-toggle:focus,
@@ -16,21 +16,21 @@
 }
 
 .navbar-default .navbar-toggle {
-    color: #fff;
+    color: @white;
     border-color: transparent;
 }
 
 .light-theme .navbar-default .navbar-toggle {
-    color: #000;
+    color: @black;
     border-color: transparent;
 }
 
 .light-theme .navbar-default .navbar-toggle .icon-bar {
-    background-color: #000;
+    background-color: @black;
 }
 
 .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #000;
+    color: @black;
 }
 
 .light-theme .navbar-default .navbar-toggle:focus,
@@ -56,23 +56,23 @@
     text-align: left;
 }
 .nav.nav-list > li.active {
-    color: #000;
+    color: @black;
     background: #eaeaea;
 }
 
 .nav.nav-list > li.active a {
-    color: #000;
+    color: @black;
 }
 
 .navbar-nav > li > a {
     font-size: 16px;
     font-weight: 400;
 
-    color: #000;
+    color: @black;
 }
 
 .nav-list.nav > li > a {
-    color: #000;
+    color: @black;
 }
 
 .dropdown-menu > li > a {
@@ -88,25 +88,25 @@
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .navbar-nav > .active > a:hover {
-    color: #fff;
+    color: @white;
     background: #c75c5c;
 }
 
 .navbar-default .navbar-nav > li > a:focus,
 .navbar-default .navbar-nav > li > a:hover {
-    color: #fff;
+    color: @white;
     background-color: transparent;
 }
 
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
-    color: #000;
+    color: @black;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
-    background: #fff;
+    background: @white;
 }
 
 .navbar-nav > li > .dropdown-menu {
@@ -125,27 +125,27 @@
     padding-right: 20px;
     padding-left: 20px;
 
-    color: #fff;
+    color: @white;
     border-radius: 4px;
 }
 
 
 .light-theme .navbar-default {
-    background-color: #fff;
+    background-color: @white;
 }
 
 .light-theme .navbar-default .navbar-nav > li.active > a {
-    color: #fff;
+    color: @white;
 }
 
 .light-theme .navbar-default .navbar-nav > li > a {
-    color: #000;
+    color: @black;
 }
 
 .light-theme .navbar-default .navbar-nav > .open > a,
 .light-theme .navbar-default .navbar-nav > .open > a:focus,
 .light-theme .navbar-default .navbar-nav > .open > a:hover {
-    color: #000;
+    color: @black;
     background: #eee;
 }
 
@@ -175,7 +175,7 @@
     width: 100%;
     padding: 10px 15px;
 
-    color: #000;
+    color: @black;
 }
 
 .navigation-docs .panel.panel-default .badge {
@@ -201,10 +201,10 @@
     }
 
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #fff;
+        color: @white;
     }
 
     .light-theme .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #000;
+        color: @black;
     }
 }
