--- a/themes/default/assets/less/components/themes.less
+++ b/themes/default/assets/less/components/themes.less
@@ -28,7 +28,7 @@
         padding-bottom: 3px;
         padding-left: 8px;
 
-        color: #fff;
+        color: @white;
         background: rgba(0,0,0,.3);
     }
 
