--- a/themes/default/assets/less/base/links.less
+++ b/themes/default/assets/less/base/links.less
@@ -7,10 +7,10 @@ a {
     text-decoration: none;
 
     color: #c75c5c;
-}
 
-a:hover {
-    text-decoration: none;
+    &:hover {
+        text-decoration: none;
 
-    color: #a22323;
+        color: #a22323;
+    }
 }
