--- a/themes/default/assets/less/components/blog.less
+++ b/themes/default/assets/less/components/blog.less
@@ -4,10 +4,10 @@
 
 .blog-post-header {
     font-size: 24px;
-}
 
-.blog-post-header a {
-    color: #000;
+    a {
+        color: @black;
+    }
 }
 
 .blog-post-author {
