--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -8,7 +8,7 @@
         margin: 0;
         padding: 0;
 
-        color: #fff;
+        color: @white;
     }
 }
 
@@ -26,7 +26,7 @@
 .mega-header h1.page-header-h1 .fa-rss {
     margin-right: 64px;
 
-    color: #fff;
+    color: @white;
 }
 
 .morfy-promo-block {
@@ -34,7 +34,7 @@
 
     text-align: center;
 
-    color: #fff;
+    color: @white;
 }
 
 .morfy-promo-block p.lead {
@@ -43,7 +43,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
 
-    color: #fff;
+    color: @white;
 }
 
 
