--- a/themes/default/assets/less/components/plugins.less
+++ b/themes/default/assets/less/components/plugins.less
@@ -22,7 +22,7 @@
 
     text-align: left;
 
-    color: #000;
+    color: @black;
     border-radius: 0;
     background: #f5f5f5;
 }
@@ -34,7 +34,7 @@
 }
 
 .plugins-table tr td:nth-child(2) {
-    color: #000;
+    color: @black;
 }
 
 .plugins-table tr td:nth-child(3) {
@@ -46,17 +46,17 @@
     padding-bottom: 3px;
     padding-left: 10px;
 
-    border: 2px solid #000;
+    border: 2px solid @black;
     border-radius: 4px;
     background: #f5f5f5;
 }
 
 .plugins-table tr td:nth-child(3):hover {
-    background: #000;
+    background: @black;
 }
 
 .plugins-table tr td:nth-child(3):hover a {
-    color: #fff;
+    color: @white;
 }
 
 .plugins-table tr td:nth-child(4) {
@@ -73,13 +73,13 @@
 .plugins-table tr td:nth-child(3) a {
     text-decoration: none;
 
-    color: #000;
+    color: @black;
 }
 
 .plugins-table tr td:nth-child(4) a {
     text-decoration: none;
 
-    color: #000;
+    color: @black;
 }
 
 .plugins-table tr td:nth-child(3) {
@@ -88,7 +88,7 @@
 
     margin-right: 10px;
 
-    color: #000;
+    color: @black;
 }
 
 .plugins-table tr td:nth-child(4) {
@@ -97,5 +97,5 @@
 
     margin-right: 10px;
 
-    color: #000;
+    color: @black;
 }
