--- a/themes/default/assets/less/generic/variables.less
+++ b/themes/default/assets/less/generic/variables.less
@@ -5,9 +5,9 @@
 //
 // Base
 //
-@base-font-family:   Arial;
+@base-font-family:  'Source Sans Pro', sans-serif;
 @base-font-color:   @black;
-@base-font-size:    12px;
+@base-font-size:    14px;
 @base-line-height:  24px;
 
 //
