--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -187,6 +187,7 @@
 @media (max-width: 600px) {
     .navbar-brand > img {
         width: 76px;
+        height: 37px;
         margin-top: -6px;
     }
 
