--- a/themes/default/assets/less/morfy.less
+++ b/themes/default/assets/less/morfy.less
@@ -30,6 +30,7 @@
 @import "components/plugins";
 @import "components/themes";
 @import "components/blog";
+@import "components/live-chat";
 @import "components/mega-header";
 @import "components/testimonials";
 @import "components/footer";
