Added transition: all .3s ease;

--- a/themes/default/assets/less/objects/buttons.less
+++ b/themes/default/assets/less/objects/buttons.less
@@ -3,6 +3,8 @@
 //
 
 .btn-black {
+    transition: all .3s ease;
+
     color: #000;
     border: 2px solid #000;
     border-radius: 4px;
@@ -16,6 +18,8 @@
 }
 
 .btn-white {
+    transition: all .3s ease;
+
     color: #000;
     border: 2px solid #fff;
     border-radius: 4px;
