--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -86,7 +86,7 @@
 .navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .navbar-nav > .active > a:hover {
     color: @white;
-    background: #c75c5c;
+    background: #e76278;
 }
 
 .navbar-default .navbar-nav > li > a:focus,
