--- a/themes/default/assets/less/generic/variables.less
+++ b/themes/default/assets/less/generic/variables.less
@@ -7,7 +7,7 @@
 //
 @base-font-family:  'Source Sans Pro', sans-serif;
 @base-font-color:   @black;
-@base-font-size:    14px;
+@base-font-size:    16px;
 @base-line-height:  24px;
 
 //
@@ -27,9 +27,10 @@
 // Scaffolding
 //
 @body-bg: @white;
+@footer-height: 80px;
 
 //
-//Spacing
+// Spacing
 //
 @base-spacing-unit: @base-font-size;
 @half-spacing-unit: @base-spacing-unit / 2;
