--- a/themes/default/assets/less/objects/buttons.less
+++ b/themes/default/assets/less/objects/buttons.less
@@ -45,8 +45,8 @@
 
 .btn-download-morfy:hover {
     color: #fff;
-    border: 2px solid #c75c5c;
-    background: #c75c5c;
+    border: 2px solid #e76278;
+    background: #e76278;
 }
 
 .btn-add-plugin {
