--- a/themes/default/assets/less/base/fonts.less
+++ b/themes/default/assets/less/base/fonts.less
@@ -7,8 +7,11 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('http://morfy.org/public/assets/fonts/MORFY_300.eot?#iefix') format('embedded-opentype'),  url('http://morfy.org/public/assets/fonts/MORFY_300.otf')  format('opentype'),
-    url('http://morfy.org/public/assets/fonts/MORFY_300.woff') format('woff'), url('MORFY_300.ttf')  format('truetype'), url('http://morfy.org/public/assets/fonts/MORFY_300.svg#MORFY_300') format('svg');
+    src: url('../../../../public/assets/fonts/MORFY_300.eot?#iefix') format('embedded-opentype'),
+    url('../../../../public/assets/fonts/MORFY_300.otf')  format('opentype'),
+    url('../../../../public/assets/fonts/MORFY_300.woff') format('woff'),
+    url('../../../../public/assets/fonts/MORFY_300.ttf')  format('truetype'),
+    url('../../../../public/assets/fonts/MORFY_300.svg#MORFY_300') format('svg');
 }
 
 @font-face {
@@ -16,8 +19,11 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('http://morfy.org/public/assets/fonts/MORFY_400?#iefix') format('embedded-opentype'),  url('http://morfy.org/public/assets/fonts/MORFY_400.otf')  format('opentype'),
-    url('http://morfy.org/public/assets/fonts/MORFY_400.woff') format('woff'), url('http://morfy.org/public/assets/fonts/MORFY_400.ttf')  format('truetype'), url('http://morfy.org/public/assets/fonts/MORFY_400.svg#MORFY_400') format('svg');
+    src: url('../../../../public/assets/fonts/MORFY_400?#iefix') format('embedded-opentype'),
+    url('../../../../public/assets/fonts/MORFY_400.otf')  format('opentype'),
+    url('../../../../public/assets/fonts/MORFY_400.woff') format('woff'),
+    url('../../../../public/assets/fonts/MORFY_400.ttf')  format('truetype'),
+    url('../../../../public/assets/fonts/MORFY_400.svg#MORFY_400') format('svg');
 }
 
 @font-face {
@@ -25,6 +31,9 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('http://morfy.org/public/assets/fonts/MORFY_700.eot?#iefix') format('embedded-opentype'),  url('http://morfy.org/public/assets/fonts/MORFY_700.otf')  format('opentype'),
-    url('http://morfy.org/public/assets/fonts/MORFY_700.woff') format('woff'), url('http://morfy.org/public/assets/fonts/MORFY_700.ttf')  format('truetype'), url('http://morfy.org/public/assets/fonts/MORFY_700.svg#MORFY_700') format('svg');
+    src: url('../../../../public/assets/fonts/MORFY_700.eot?#iefix') format('embedded-opentype'),
+    url('../../../../public/assets/fonts/MORFY_700.otf')  format('opentype'),
+    url('../../../../public/assets/fonts/MORFY_700.woff') format('woff'),
+    url('../../../../public/assets/fonts/MORFY_700.ttf')  format('truetype'),
+    url('../../../../public/assets/fonts/MORFY_700.svg#MORFY_700') format('svg');
 }
