Site UI/UX/Content Improvements

--- a/themes/default/assets/less/components/footer.less
+++ b/themes/default/assets/less/components/footer.less
@@ -59,7 +59,7 @@
             color: @footer-social-color;
 
             &:hover {
-                color: #e76278;
+                color: #3cb4f9;
             }
         }
     }
