--- a/themes/default/assets/less/components/live-chat.less
+++ b/themes/default/assets/less/components/live-chat.less
@@ -27,7 +27,7 @@
         box-shadow: 0 6px 13px 0 rgba(0,0,0,.23);
 
         &:hover {
-            background: #765ba4;
+            background: #3cb4f9;
         }
     }
 }
