--- a/themes/default/assets/less/objects/buttons.less
+++ b/themes/default/assets/less/objects/buttons.less
@@ -39,14 +39,14 @@
 
     color: #fff;
     border: 2px solid #fff;
-    border-radius: 4px;
+    border-radius: 25px;
     background: transparent;
 }
 
 .btn-download-morfy:hover {
     color: #fff;
-    border: 2px solid #e76278;
-    background: #e76278;
+    border: 2px solid #0071b2;
+    background: #0071b2;
 }
 
 .btn-add-plugin {
