--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -1,5 +1,7 @@
 .mega-header {
-    background: url('../img/sky-bg.jpg');
+    background: url('../img/morfy-universe-2.jpg');
+    background-color: @black;
+    background-size: cover;
     background-size: cover;
 
     h1 {
@@ -11,6 +13,20 @@
         color: @white;
     }
 }
+
+.universe-dark-matter,
+.universe {
+    position: absolute;
+
+    display: block;
+
+    width: 100%;
+    height: 716px;
+
+    opacity: 0.3;
+    background: @black;
+}
+
 
 .mega-header h1.page-header-h1 {
     font-size: 46px;
