--- a/themes/default/assets/less/components/testimonials.less
+++ b/themes/default/assets/less/components/testimonials.less
@@ -13,7 +13,7 @@
     text-align: center;
 
     color: @black;
-    background: url('../img/bg-2.jpg');
+    background: #dceaf9;
     background-repeat: no-repeat;
 
     .carousel-caption {
