--- a/themes/default/assets/less/components/live-chat.less
+++ b/themes/default/assets/less/components/live-chat.less
@@ -3,11 +3,13 @@
 //
 
 .live-chat-button {
+    position: relative;
+    z-index: 90;
+
     > .fa {
         font-size: 24px;
 
         position: fixed;
-        z-index: 1;
         right: 15px;
         bottom: 15px;
 
