--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -1,6 +1,6 @@
 
 .nav {
-    padding: 25px 0 25px 20px;
+    padding: 30px 0 30px 20px;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -41,7 +41,7 @@
 }
 
 .navbar-brand > img {
-    margin-top: 0;
+    margin-top: 4px;
 }
 
 .navbar-nav > li > a {
