Site UI/UX/Content Improvements

--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -67,8 +67,13 @@
 
 
 @media (max-width: 600px) {
+    .universe-dark-matter,
+    .universe {
+        height: 568px;
+    }
+
     .morfy-promo-block {
-        padding: 70px 0 100px;
+        padding: 120px 0 110px;
     }
 
     .morfy-promo-block p.lead {
