Site UI/UX/Content Improvements

--- a/themes/default/assets/less/components/footer.less
+++ b/themes/default/assets/less/components/footer.less
@@ -64,3 +64,27 @@
         }
     }
 }
+
+@media (max-width: 600px) {
+    #footer {
+        padding-top: 20px;
+        padding-bottom: 320px;
+
+        .copyright {
+            padding: 0;
+
+            li {
+                margin: 0;
+                padding: 0;
+
+                border-left: none;
+            }
+        }
+
+        .social-links {
+            > a > .fa {
+                margin: 20px;
+            }
+        }
+    }
+}
