Site UI/UX/Content Improvements

--- a/themes/default/assets/less/base/links.less
+++ b/themes/default/assets/less/base/links.less
@@ -4,13 +4,14 @@
 
 
 a {
+    transition: all .3s ease;
     text-decoration: none;
 
-    color: #c75c5c;
+    color: #3cb4f9;
 
     &:hover {
         text-decoration: none;
 
-        color: #a22323;
+        color: #006faf;
     }
 }
