--- a/themes/default/assets/less/components/blog.less
+++ b/themes/default/assets/less/components/blog.less
@@ -6,7 +6,16 @@
     font-size: 24px;
 
     a {
+        transition: all .3s ease;
+        text-decoration: none;
+
         color: @black;
+
+        &:hover {
+            text-decoration: none;
+
+            color: #006faf;
+        }
     }
 }
 
