--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -42,7 +42,15 @@
 .mega-header h1.page-header-h1 .fa-rss {
     margin-right: 64px;
 
+    transition: all .3s ease;
+    text-decoration: none;
+
     color: @white;
+    &:hover {
+        text-decoration: none;
+
+        color: #3cb4f9;
+    }
 }
 
 .morfy-promo-block {
