--- a/themes/default/assets/less/base/main.less
+++ b/themes/default/assets/less/base/main.less
@@ -26,8 +26,12 @@ p {
 }
 
 pre {
-    border: 1px solid #f0f0f0;
-    background-color: #f0f0f0;
+    padding: 0;
+
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: none;
 }
 
 /* Wrapper for page content to push down footer */
