Site UI/UX/Content Improvements

--- a/themes/default/assets/less/base/main.less
+++ b/themes/default/assets/less/base/main.less
@@ -25,13 +25,24 @@ p {
     color: @black;
 }
 
+body,
+p {
+    line-height: 26px;
+}
+
 pre {
     padding: 0;
 
     border: none;
-    border-radius: 0;
     background-color: transparent;
     box-shadow: none;
+
+    bodrder-radius: 4px;
+}
+
+code {
+    color: #000;
+    background-color: #f3eded;
 }
 
 /* Wrapper for page content to push down footer */
