--- a/themes/default/assets/less/components/benefits.less
+++ b/themes/default/assets/less/components/benefits.less
@@ -1,6 +1,6 @@
 /* Features Content */
 .benefits-container {
-    padding-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 .features-columns {
@@ -11,7 +11,7 @@
     h4 {
         font-weight: 700;
 
-        color: #c75c5c;
+        color: #000;
     }
 
     img {
