--- a/themes/default/assets/less/components/footer.less
+++ b/themes/default/assets/less/components/footer.less
@@ -7,13 +7,15 @@
 
 
 #footer {
+    position: relative;
+
     height: @footer-height;
     height: 80px;
-    padding-top: 115px;
-    padding-bottom: 210px;
+    padding-top: 140px;
+    padding-bottom: 240px;
 
     color: @footer-text-color;
-    background: #00042f;
+    background: #212121;
     background-position: bottom;
     background-size: cover;
 
