--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -1,5 +1,5 @@
 .mega-header {
-    background: url('../img/morfy-universe-2.jpg');
+    background: url('../img/morfy-universe-3.jpg');
     background-color: @black;
     background-size: cover;
     background-size: cover;
@@ -27,12 +27,15 @@
     background: @black;
 }
 
+.universe-dark-matter {
+    opacity: 0;
+}
 
 .mega-header h1.page-header-h1 {
     font-size: 46px;
 
-    padding-top: 45px;
-    padding-bottom: 45px;
+    padding-top: 65px;
+    padding-bottom: 65px;
 }
 
 .mega-header h1.page-header-h1 .blog-rss-button {
