--- a/themes/default/assets/less/components/testimonials.less
+++ b/themes/default/assets/less/components/testimonials.less
@@ -8,12 +8,12 @@
     overflow: hidden;
 
     width: 100%;
-    padding: 80px 0;
+    padding: 90px 0;
 
     text-align: center;
 
     color: @black;
-    background: #dceaf9;
+    background: #eeeeee url('../img/tile-grey.png') repeat 0 0;
     background-repeat: no-repeat;
 
     .carousel-caption {
