--- a/themes/default/assets/less/base/headings.less
+++ b/themes/default/assets/less/base/headings.less
@@ -13,8 +13,9 @@ h5 {
 }
 
 .h2-reason {
-    font-size: 38px;
+    font-size: 42px;
+    line-height: 42px;
 
-    margin-top: 60px;
-    margin-bottom: 70px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
