--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -49,6 +49,10 @@
     padding-bottom: 10px;
 }
 
+.nav.nav-list {
+    padding: 0;
+}
+
 .nav.nav-list > li {
     text-align: left;
 }
@@ -131,6 +135,10 @@
 
 .light-theme .navbar-default {
     background-color: @white;
+}
+
+.light-theme .separator {
+    display: block!important;
 }
 
 .light-theme .navbar-default .navbar-nav > li.active > a {
