--- a/themes/default/assets/less/components/plugins.less
+++ b/themes/default/assets/less/components/plugins.less
@@ -18,7 +18,7 @@
     overflow: hidden;
 
     width: 400px;
-    height: 170px;
+    height: 200px;
     margin-right: 20px;
     margin-bottom: 20px;
     margin-left: 0;
@@ -35,6 +35,8 @@
     font-size: 24px;
 
     display: block;
+
+    padding-bottom: 12px;
 }
 
 .plugins-table tr td:nth-child(2) {
@@ -64,7 +66,7 @@
 }
 
 .plugins-table tr td:nth-child(4) {
-    left: 120px;
+    left: 130px;
 
     display: block;
 
