Site UI/UX/Content Improvements

--- a/themes/default/assets/less/components/blog.less
+++ b/themes/default/assets/less/components/blog.less
@@ -5,6 +5,8 @@
 .blog-post-header {
     font-size: 24px;
 
+    margin: 0;
+
     a {
         transition: all .3s ease;
         text-decoration: none;
@@ -20,5 +22,7 @@
 }
 
 .blog-post-author {
+    margin-bottom: 25px;
+
     color: #ccc;
 }
