--- a/themes/default/assets/less/base/headings.less
+++ b/themes/default/assets/less/base/headings.less
@@ -12,6 +12,15 @@ h5 {
     color: @black;
 }
 
+.h1,
+h2,
+.h2,
+h3,
+.h3 {
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+
 .h2-reason {
     font-size: 42px;
     line-height: 42px;
