--- a/themes/default/assets/less/base/headings.less
+++ b/themes/default/assets/less/base/headings.less
@@ -21,6 +21,14 @@ h3,
     margin-bottom: 10px;
 }
 
+div > h1,
+div > h2,
+div > h3,
+div > h4,
+div > h5 {
+    margin-top: 0;
+}
+
 .h2-reason {
     font-size: 42px;
     line-height: 42px;
