Site UI/UX/Content Improvements

--- a/themes/default/assets/less/base/headings.less
+++ b/themes/default/assets/less/base/headings.less
@@ -21,11 +21,11 @@ h3,
     margin-bottom: 10px;
 }
 
-div > h1,
-div > h2,
-div > h3,
-div > h4,
-div > h5 {
+div > h1:first-of-type,
+div > h2:first-of-type,
+div > h3:first-of-type,
+div > h4:first-of-type,
+div > h5:first-of-type {
     margin-top: 0;
 }
 
