--- a/themes/default/assets/less/components/footer.less
+++ b/themes/default/assets/less/components/footer.less
@@ -11,8 +11,8 @@
 
     height: @footer-height;
     height: 80px;
-    padding-top: 140px;
-    padding-bottom: 240px;
+    padding-top: 110px;
+    padding-bottom: 260px;
 
     color: @footer-text-color;
     background: #212121;
@@ -29,12 +29,20 @@
 
     .locales,
     .copyright {
-        margin: 0;
+        margin: 30px 0 0 0;
         padding: 0;
 
         list-style: none;
 
-        .text-left;
+        .text-center;
+
+        .fa {
+            color: @white;
+        }
+
+        .highlight {
+            color: @white;
+        }
 
         li {
             display: inline-block;
@@ -55,7 +63,7 @@
 
     .social-links {
         padding-top: 10px;
-        padding-bottom: 40px;
+        padding-bottom: 10px;
 
         > a > .fa {
             font-size: 28px;
