Project Re-branding

--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -1,7 +1,6 @@
 .mega-header {
-    background: url('../img/fansoro-universe-3.jpg');
+    background: url('../img/vertex-bg.jpg');
     background-color: @black;
-    background-size: cover;
     background-size: cover;
 
     h1 {
