--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -40,6 +40,14 @@
     padding: 0;
 }
 
+.navbar-default .navbar-brand {
+    font-size: 28px;
+
+    margin-top: 22px;
+
+    color: @white;
+}
+
 .navbar-brand > img {
     margin-top: 4px;
 }
