Project Re-branding

--- a/themes/default/assets/less/components/live-chat.less
+++ b/themes/default/assets/less/components/live-chat.less
@@ -25,11 +25,11 @@
 
         color: #fff;
         border-radius: 50%;
-        background: #0071b2;
+        background: #ca3628;
         box-shadow: 0 6px 13px 0 rgba(0,0,0,.23);
 
         &:hover {
-            background: #3cb4f9;
+            background: #de6155;
         }
     }
 }
