Project Re-branding

--- a/themes/default/assets/less/objects/buttons.less
+++ b/themes/default/assets/less/objects/buttons.less
@@ -45,8 +45,8 @@
 
 .btn-download-fansoro:hover {
     color: #fff;
-    border: 2px solid #0071b2;
-    background: #0071b2;
+    border: 2px solid #ca3628;
+    background: #ca3628;
 }
 
 .btn-add-plugin {
