Project Re-branding

--- a/themes/default/assets/less/base/links.less
+++ b/themes/default/assets/less/base/links.less
@@ -7,11 +7,11 @@ a {
     transition: all .3s ease;
     text-decoration: none;
 
-    color: #3cb4f9;
+    color: #ca3628;
 
     &:hover {
         text-decoration: none;
 
-        color: #006faf;
+        color: #d68780;
     }
 }
