--- a/themes/default/assets/less/components/footer.less
+++ b/themes/default/assets/less/components/footer.less
@@ -76,7 +76,7 @@
             color: @footer-social-color;
 
             &:hover {
-                color: #3cb4f9;
+                color: #ca3628;
             }
         }
     }
