--- a/themes/default/assets/less/components/nav.less
+++ b/themes/default/assets/less/components/nav.less
@@ -101,7 +101,7 @@
 .navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .navbar-nav > .active > a:hover {
     color: @white;
-    background: #3cb4f9;
+    background: #ca3628;
 }
 
 .navbar-default .navbar-nav > li > a:focus,
