--- a/themes/default/assets/less/components/blog.less
+++ b/themes/default/assets/less/components/blog.less
@@ -16,7 +16,7 @@
         &:hover {
             text-decoration: none;
 
-            color: #006faf;
+            color: #ca3628;
         }
     }
 }
