Project Re-branding

--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -48,10 +48,11 @@
     text-decoration: none;
 
     color: @white;
+
     &:hover {
         text-decoration: none;
 
-        color: #3cb4f9;
+        color: #ca3628;
     }
 }
 
