Project Re-branding

--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -1,5 +1,5 @@
 .mega-header {
-    background: url('../img/vertex-bg.jpg');
+    background: url('../img/bg-red.jpg');
     background-color: @black;
     background-size: cover;
 
