Project Re-branding

--- a/themes/default/assets/less/components/mega-header.less
+++ b/themes/default/assets/less/components/mega-header.less
@@ -9,7 +9,8 @@
         margin: 0;
         padding: 0;
 
-        color: @white;
+        color: #ffff00;
+        text-shadow: 1px 1px 1px #000;
     }
 }
 
@@ -73,7 +74,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
 
-    color: @white;
+    color: #ffff00;
 }
 
 
