--- a/themes/default/assets/less/objects/buttons.less
+++ b/themes/default/assets/less/objects/buttons.less
@@ -37,16 +37,16 @@
 
     transition: all .3s ease;
 
-    color: #fff;
-    border: 2px solid #fff;
+    color: #ffff00;
+    border: 2px solid #ffff00;
     border-radius: 25px;
     background: transparent;
 }
 
 .btn-download-fansoro:hover {
-    color: #fff;
-    border: 2px solid #ca3628;
-    background: #ca3628;
+    color: #000;
+    border: 2px solid #ffff00;
+    background: #ffff00;
 }
 
 .btn-add-plugin {
